--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
-		"@typescript-eslint/eslint-plugin": "^8.46.2",
-		"@typescript-eslint/parser": "^8.46.2",
-		"eslint": "^9.38.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.5",
-		"husky": "^9.1.7",
-		"lint-staged": "^16.2.6",
-		"prettier": "^3.6.2",
 		"svelte": "^5.39.5",
-		"svelte-check": "^4.3.3",
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
+		"@aws-amplify/auth": "^6.12.2",
+		"@aws-sdk/client-dynamodb": "^3.777.0",
+		"@aws-sdk/client-s3": "^3.777.0",
+		"@aws-amplify/core": "^6.11.2",
+		"@aws-sdk/lib-dynamodb": "^3.777.0",
+		"@aws-sdk/s3-request-presigner": "^3.777.0",
+		"amplify-adapter": "^0.2.0",
+		"aws-amplify": "^6.14.2",
 		"bootstrap": "^5.3.8",
-		"bootstrap-icons": "^1.13.1"
+		"bootstrap-icons": "^1.13.1",
+		"chart.js": "^4.4.8",
+		"dotenv": "^16.4.7"
 	}
 }
