--- a/amplify.yml
+++ b/amplify.yml
@@ -1,17 +1,19 @@
-version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - 'npm ci --cache .npm --prefer-offline'
-    build:
-      commands:
-        - 'npm run build'
-  artifacts:
-    baseDirectory: .svelte-kit/output/client
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - '.npm/**/*'
-      - 'node_modules/**/*'
+   version: 1
+   frontend:
+       phases:
+           preBuild:
+               commands:
+                   - 'npm ci --cache .npm --prefer-offline'
+           build:
+               commands:
+                   - 'npm run build'
+                   - 'cd build/compute/default/'
+                   - 'npm i --production'
+           
+       artifacts:
+           baseDirectory: build
+           files:
+               - '**/*'
+       cache:
+           paths:
+               - '.npm/**/*'
