--- a/amplify.yml
+++ b/amplify.yml
@@ -3,17 +3,15 @@
        phases:
            preBuild:
                commands:
-                   - 'npm ci --cache .npm --prefer-offline'
+                   - npm ci
            build:
                commands:
-                   - 'npm run build'
-                   - 'cd build/compute/default/'
-                   - 'npm i --production'
-           
+                   - npm run build
        artifacts:
            baseDirectory: build
            files:
                - '**/*'
        cache:
            paths:
-               - '.npm/**/*'
+               - node_modules/**/*
+               - .npm/**/*
