--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
+		"@aws-amplify/backend": "^1.17.0",
+		"@aws-amplify/backend-cli": "^1.8.0",
+		"aws-amplify": "^6.15.7",
 		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3"
 	}
