added dynamodb with broadcast for syncing

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,13 @@ node_modules/
 # Build outputs
 build/
 .svelte-kit/
+.output
 
 # Environment files
 .env
 .env.*
+!.env.example
+!.env.test
 
 # Logs
 npm-debug.log*
@@ -20,25 +23,10 @@ lerna-debug.log*
 .DS_Store
 Thumbs.db
 
-node_modules
-
-# Output
-.output
+# Deployment platforms
 .vercel
 .netlify
 .wrangler
-/.svelte-kit
-/build
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
-.env
-.env.*
-!.env.example
-!.env.test
 
 # Vite
 vite.config.js.timestamp-*
@@ -47,3 +35,6 @@ vite.config.ts.timestamp-*
 # Cursor
 .cursorrules
 .cursor/rules
+
+# Amplify generated files (if generated at root)
+amplify_outputs.json
