--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "aws-uturn-clients",
+	"name": "aws-sveltekit-amplify-todo",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
